--- a/index.html
+++ b/index.html
@@ -99,8 +99,10 @@
   </head>
 
   <body>
-    
-<div id="customCursor"></div>
+    <div id="customCursor">
+      <span>View</span>
+    </div>
+
     <header class="header">
       <div class="header_inner">
         <div class="header_content container">
@@ -532,5 +534,6 @@
     <script src="./js/scrolltrigger.min.js"></script>
     <script src="./js/gsap.min.js"></script>
     <script src="./js/app.js"></script>
+    
   </body>
 </html>
