Fixed Scrolling Issue

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       content="https://opengraph.b-cdn.net/production/images/46af9b40-2ef8-482c-86c4-12c0539ae451.png?token=nxPnUjbGbnXq1cC_sNZ2tEeVHMVt-DsDJbSK8nagAT4&height=675&width=1200&expires=33273745103"
     />
 
-    <link rel="icon" href="./assests/images/fav-icon.png" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="./assests/images/fav-icon.png" />
+    <link rel="icon" href="./assets/images/fav-icon.png" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="./assets/images/fav-icon.png" />
     <link rel="stylesheet" href="./css/app.css" />
     <link rel="canonical" href="https://www.adnanmansuri.pages.dev" />
 
@@ -110,7 +110,7 @@
             <div class="header_brand_logo site_navigation--item">
               <a href="#">
                 <img
-                  src="./assests/images/logo-gradient.svg"
+                  src="./assets/images/logo-gradient.svg"
                   alt="Adnan Mansuri Logo"
                 />
               </a>
@@ -143,7 +143,7 @@
                 <span
                   ><img
                     class="theme_icon"
-                    src="./assests/images/link_arro.webp"
+                    src="./assets/images/link_arro.webp"
                     alt="right icon"
                 /></span>
               </a>
@@ -169,18 +169,18 @@
             <a href="#" class="site_cta--outline__a">
               <span>Download CV</span>
               <span
-                ><img src="./assests/images/cv.webp" alt="Download CV Icon"
+                ><img src="./assets/images/cv.webp" alt="Download CV Icon"
               /></span>
             </a>
           </div>
         </div>
 
-
         <div class="siteVelocity__slider--Container">
           <div class="siteVelocity__slider" data-direction="1">
-                  <span class="text-item">UI | UX Designer</span><span class="text-item has__heighlight--clr">Web Developer</span><span class="text-item">Graphics Designer</span>
-                </div>
-          
+            <span class="text-item">UI | UX Designer</span
+            ><span class="text-item has__heighlight--clr">Web Developer</span
+            ><span class="text-item">Graphics Designer</span>
+          </div>
         </div>
       </section>
 
@@ -251,7 +251,7 @@
                 <a href="#" class="projectAnchored__item">
                   <div class="project_img--mian">
                     <img
-                      src="./assests/images/Frame_12.png"
+                      src="./assets/images/Frame_12.png"
                       alt=""
                       class="project_img"
                     />
@@ -266,7 +266,7 @@
                       </div>
                     </div>
                     <div class="project_link--area">
-                      <img src="./assests/images/arrow.webp" alt="" />
+                      <img src="./assets/images/arrow.webp" alt="" />
                     </div>
                   </div>
                 </a>
@@ -278,7 +278,7 @@
                 <a href="#" class="projectAnchored__item">
                   <div class="project_img--mian">
                     <img
-                      src="./assests/images/Frame_13.webp"
+                      src="./assets/images/Frame_13.webp"
                       alt=""
                       class="project_img"
                     />
@@ -295,7 +295,7 @@
                       </div>
                     </div>
                     <div class="project_link--area">
-                      <img src="./assests/images/arrow.webp" alt="" />
+                      <img src="./assets/images/arrow.webp" alt="" />
                     </div>
                   </div>
                 </a>
@@ -307,7 +307,7 @@
                 <a href="#" class="projectAnchored__item">
                   <div class="project_img--mian">
                     <img
-                      src="./assests/images/Frame_14.webp"
+                      src="./assets/images/Frame_14.webp"
                       alt=""
                       class="project_img"
                     />
@@ -322,7 +322,7 @@
                       </div>
                     </div>
                     <div class="project_link--area">
-                      <img src="./assests/images/arrow.webp" alt="" />
+                      <img src="./assets/images/arrow.webp" alt="" />
                     </div>
                   </div>
                 </a>
@@ -334,7 +334,7 @@
                 <a href="#" class="projectAnchored__item">
                   <div class="project_img--mian">
                     <img
-                      src="./assests/images/Frame_15.webp"
+                      src="./assets/images/Frame_15.webp"
                       alt=""
                       class="project_img"
                     />
@@ -349,7 +349,7 @@
                       </div>
                     </div>
                     <div class="project_link--area">
-                      <img src="./assests/images/arrow.webp" alt="" />
+                      <img src="./assets/images/arrow.webp" alt="" />
                     </div>
                   </div>
                 </a>
@@ -371,7 +371,7 @@
           <div class="skills_icon">
             <img
               class="skill"
-              src="./assests/images/html.webp"
+              src="./assets/images/html.webp"
               alt="Skill Icon Html"
             />
             <span class="skills__Label"> HTML </span>
@@ -379,7 +379,7 @@
           <div class="skills_icon">
             <img
               class="skill"
-              src="./assests/images/css.webp"
+              src="./assets/images/css.webp"
               alt="Skill Icon Css"
             />
             <span class="skills__Label"> CSS </span>
@@ -387,7 +387,7 @@
           <div class="skills_icon">
             <img
               class="skill"
-              src="./assests/images/js.webp"
+              src="./assets/images/js.webp"
               alt="Skill Icon Javascript"
             />
             <span class="skills__Label"> JavaScript </span>
@@ -395,16 +395,16 @@
           <div class="skills_icon">
             <img
               class="skill"
-              src="./assests/images/jquery.webp"
+              src="./assets/images/jquery.webp"
               alt="Skill Icon Jquery"
             />
-            <span class="skills__Label" style="color: #000;"> jQuery </span>
+            <span class="skills__Label" style="color: #000"> jQuery </span>
           </div>
 
           <div class="skills_icon">
             <img
               class="skill"
-              src="./assests/images/gsap.webp"
+              src="./assets/images/gsap.webp"
               alt="Skill Icon Greensock Animation Pltaform"
             />
             <span class="skills__Label"> GSAP </span>
@@ -412,7 +412,7 @@
           <div class="skills_icon">
             <img
               class="skill"
-              src="./assests/images/bootstrap.webp"
+              src="./assets/images/bootstrap.webp"
               alt="Skill Icon Bootstrap"
             />
             <span class="skills__Label"> Bootstrap </span>
@@ -420,7 +420,7 @@
           <div class="skills_icon">
             <img
               class="skill"
-              src="./assests/images/wp.webp"
+              src="./assets/images/wp.webp"
               alt="Skill Icon Wordpress"
             />
             <span class="skills__Label"> Wordpress </span>
@@ -428,7 +428,7 @@
           <div class="skills_icon">
             <img
               class="skill"
-              src="./assests/images/vscode.webp"
+              src="./assets/images/vscode.webp"
               alt="Skill Icon Visual Studio Code"
             />
             <span class="skills__Label"> Visual Studio Code </span>
@@ -436,7 +436,7 @@
           <div class="skills_icon">
             <img
               class="skill"
-              src="./assests/images/sublime_text.webp"
+              src="./assets/images/sublime_text.webp"
               alt="Skill Icon Submile Text"
             />
             <span class="skills__Label"> Sublime Text </span>
@@ -444,7 +444,7 @@
           <div class="skills_icon">
             <img
               class="skill"
-              src="./assests/images/ai.webp"
+              src="./assets/images/ai.webp"
               alt="Skill Icon Adobe Illustrator"
             />
             <span class="skills__Label"> Adobe Illustrator </span>
@@ -452,7 +452,7 @@
           <div class="skills_icon">
             <img
               class="skill"
-              src="./assests/images/ps.webp"
+              src="./assets/images/ps.webp"
               alt="Skill Icon Adobe Photoshop"
             />
             <span class="skills__Label"> Photoshop </span>
@@ -460,7 +460,7 @@
           <div class="skills_icon">
             <img
               class="skill"
-              src="./assests/images/figma.webp"
+              src="./assets/images/figma.webp"
               alt="Skill Icon Figma"
             />
             <span class="skills__Label"> Figma </span>
@@ -472,7 +472,7 @@
       <div class="site_footer-container">
         <div class="site_footer-left site_navigation--item">
           <a href="#Home">
-            <img src="./assests/images/logo-big.svg" alt="Adnan Mansuri Logo" />
+            <img src="./assets/images/logo-big.svg" alt="Adnan Mansuri Logo" />
           </a>
         </div>
         <div class="site_footer-right site_navigation--item">
@@ -502,7 +502,7 @@
                 >+91-834-7693-235</a
               >
               <span
-                ><img src="./assests/images/arrow.webp" alt="Arrow Icon"
+                ><img src="./assets/images/arrow.webp" alt="Arrow Icon"
               /></span>
             </li>
             <li class="site_footer-nav--links contact-section">
@@ -510,7 +510,7 @@
                 >hello@adnanmansuri.com</a
               >
               <span
-                ><img src="./assests/images/arrow.webp" alt="Arrow Icon"
+                ><img src="./assets/images/arrow.webp" alt="Arrow Icon"
               /></span>
             </li>
           </ul>
@@ -522,7 +522,7 @@
           </p>
           <a href="#" class="has_active--effect"
             ><img
-              src="./assests/images/linkdin.svg"
+              src="./assets/images/linkdin.svg"
               alt="Adnan Mansuri's Linkedin Profile"
           /></a>
         </div>
@@ -534,6 +534,5 @@
     <script src="./js/scrolltrigger.min.js"></script>
     <script src="./js/gsap.min.js"></script>
     <script src="./js/app.js"></script>
-    
   </body>
 </html>
