--- a/pages/startproject.html
+++ b/pages/startproject.html
@@ -45,12 +45,8 @@
       content="https://opengraph.b-cdn.net/production/images/46af9b40-2ef8-482c-86c4-12c0539ae451.png?token=nxPnUjbGbnXq1cC_sNZ2tEeVHMVt-DsDJbSK8nagAT4&height=675&width=1200&expires=33273745103"
     />
 
-    <link
-      rel="icon"
-      href="../assests/images/fav-icon.png"
-      type="image/x-icon"
-    />
-    <link rel="apple-touch-icon" href="../assests/images/fav-icon.png" />
+    <link rel="icon" href="../assets/images/fav-icon.png" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="../assets/images/fav-icon.png" />
     <link rel="stylesheet" href="../css/app.css" />
     <link rel="canonical" href="https://www.adnanmansuri.pages.dev" />
 
@@ -66,7 +62,7 @@
           "https://github.com/adnanmansuri",
           "https://twitter.com/adnanmansuri"
           ],
-          "image": "./assests/images/link_poster-large.png",
+          "image": "./assets/images/link_poster-large.png",
           "description": "Adnan Mansuri is a freelance website developer, UI/UX designer, and graphic designer specializing in creating responsive websites, user-centric designs, and striking graphics.",
           "address": {
               "@type": "PostalAddress",
@@ -107,7 +103,7 @@
             <div class="header_brand_logo site_navigation--item">
               <a href="../index.html">
                 <img
-                  src="../assests/images/logo-gradient.svg"
+                  src="../assets/images/logo-gradient.svg"
                   alt="Adnan Mansuri Logo"
                 />
               </a>
@@ -148,7 +144,7 @@
                 <span
                   ><img
                     class="theme_icon"
-                    src="../assests/images/link_arro.webp"
+                    src="../assets/images/link_arro.webp"
                     alt="right icon"
                 /></span>
               </a>
@@ -342,7 +338,7 @@
 
           <div class="contact--page__right">
             <img
-              src="../assests/images/gradient-color 2.png"
+              src="../assets/images/gradient-color 2.png"
               alt="Background Image"
             />
           </div>
@@ -362,10 +358,7 @@
       <div class="site_footer-container">
         <div class="site_footer-left site_navigation--item">
           <a href="#Home">
-            <img
-              src="../assests/images/logo-big.svg"
-              alt="Adnan Mansuri Logo"
-            />
+            <img src="../assets/images/logo-big.svg" alt="Adnan Mansuri Logo" />
           </a>
         </div>
         <div class="site_footer-right site_navigation--item">
@@ -395,7 +388,7 @@
                 >+91-834-7693-235</a
               >
               <span
-                ><img src="../assests/images/arrow.webp" alt="Arrow Icon"
+                ><img src="../assets/images/arrow.webp" alt="Arrow Icon"
               /></span>
             </li>
             <li class="site_footer-nav--links contact-section">
@@ -403,7 +396,7 @@
                 >hello@adnanmansuri.com</a
               >
               <span
-                ><img src="../assests/images/arrow.webp" alt="Arrow Icon"
+                ><img src="../assets/images/arrow.webp" alt="Arrow Icon"
               /></span>
             </li>
           </ul>
@@ -415,7 +408,7 @@
           </p>
           <a href="#" class="has_active--effect"
             ><img
-              src="../assests/images/linkdin.svg"
+              src="../assets/images/linkdin.svg"
               alt="Adnan Mansuri's Linkedin Profile"
           /></a>
         </div>
