feat: overhaul projects section with list layout and GSAP animations
- Replace grid-based project cards with a structured list layout.
- Implement GSAP mouse-follower hover effect to reveal project images.
- Add staggered scroll entrance animation for project list items.
- Style the new list layout, header columns, and hover reveal container.
- Sync project data with 7 new entries (including Blue Tees Golf, Aditiya Synthetic, etc.).
- Sort projects by year in descending order (2025 -> 2024 -> 2023).
- Disable hover effects on mobile devices for better usability.

--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@
           "jobTitle": "Freelance Website Developer, UI/UX Designer, Graphic Designer",
           "url": "https://www.adnanmansuri.pages.dev",
           "sameAs": [
-          "https://www.linkedin.com/in/adnanmansuri",
-          "https://github.com/adnanmansuri",
-          "https://twitter.com/adnanmansuri"
+          "https://www.linkedin.com/in/mansuri-adnan/",
+          "https://github.com/mansurivilla",
           ],
           "image": "https://opengraph.b-cdn.net/production/images/46af9b40-2ef8-482c-86c4-12c0539ae451.png?token=nxPnUjbGbnXq1cC_sNZ2tEeVHMVt-DsDJbSK8nagAT4&height=675&width=1200&expires=33273745103",
           "description": "Adnan Mansuri is a freelance website developer, UI/UX designer, and graphic designer specializing in creating responsive websites, user-centric designs, and striking graphics.",
@@ -138,7 +137,10 @@
               </li>
             </ul>
             <div class="cta_main diraction_aware_hover site_navigation--item">
-              <a href="./pages/startproject.html" class="cta"
+              <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSdDxT5zvEJ6fZz190C7NdVbUw3ofFP-3ilEChHTOVkka3h8TQ/viewform?usp=publish-editor"
+                target="_blank"
+                class="cta"
                 >Start Project
                 <span
                   ><img
@@ -149,10 +151,52 @@
               </a>
             </div>
           </nav>
-          <button class="menu-toggle">☰</button>
+          <button class="menu-toggle">
+            <svg
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></g>
+              <g id="SVGRepo_iconCarrier">
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M4 5C3.44772 5 3 5.44772 3 6C3 6.55228 3.44772 7 4 7H20C20.5523 7 21 6.55228 21 6C21 5.44772 20.5523 5 20 5H4ZM7 12C7 11.4477 7.44772 11 8 11H20C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13H8C7.44772 13 7 12.5523 7 12ZM13 18C13 17.4477 13.4477 17 14 17H20C20.5523 17 21 17.4477 21 18C21 18.5523 20.5523 19 20 19H14C13.4477 19 13 18.5523 13 18Z"
+                  fill="#ffffff"
+                ></path>
+              </g>
+            </svg>
+          </button>
         </div>
         <div class="off-canvas-menu">
-          <button class="menu-close">&times;</button>
+          <button class="menu-close">
+            <svg
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></g>
+              <g id="SVGRepo_iconCarrier">
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M5.29289 5.29289C5.68342 4.90237 6.31658 4.90237 6.70711 5.29289L12 10.5858L17.2929 5.29289C17.6834 4.90237 18.3166 4.90237 18.7071 5.29289C19.0976 5.68342 19.0976 6.31658 18.7071 6.70711L13.4142 12L18.7071 17.2929C19.0976 17.6834 19.0976 18.3166 18.7071 18.7071C18.3166 19.0976 17.6834 19.0976 17.2929 18.7071L12 13.4142L6.70711 18.7071C6.31658 19.0976 5.68342 19.0976 5.29289 18.7071C4.90237 18.3166 4.90237 17.6834 5.29289 17.2929L10.5858 12L5.29289 6.70711C4.90237 6.31658 4.90237 5.68342 5.29289 5.29289Z"
+                  fill="#ffffff"
+                ></path>
+              </g>
+            </svg>
+          </button>
         </div>
       </div>
     </header>
@@ -166,10 +210,17 @@
             functional websites.
           </p>
           <div class="site_cta--outline has_magnatic--effect">
-            <a href="#" class="site_cta--outline__a">
-              <span>Download CV</span>
+            <a
+              href="https://docs.google.com/forms/d/e/1FAIpQLSdDxT5zvEJ6fZz190C7NdVbUw3ofFP-3ilEChHTOVkka3h8TQ/viewform?usp=publish-editor"
+              target="_blank"
+              class="site_cta--outline__a"
+            >
+              <span>Start Porject</span>
               <span
-                ><img src="./assets/images/cv.webp" alt="Download CV Icon"
+                ><img
+                  class="theme_icon"
+                  src="./assets/images/link_arro.webp"
+                  alt="right icon"
               /></span>
             </a>
           </div>
@@ -228,134 +279,179 @@
           </div>
         </div>
       </section>
-      <section
-        id="projects"
-        class="has_scroll--speed__section background_light"
-        data-disable-scroll-animation="768"
-      >
-        <div class="projects_container--main site_content-container">
+      <section id="projects" class="site_content-container">
+        <div class="projects_container--main">
           <div class="projects_content">
             <div class="project_title site_title--container">
-              <h2 class="site_section--title">Projects</h2>
-              <p class="site_section--decs has_splitting--effect">
-                Showcasing a variety of web development projects, from custom
-                websites to dynamic web applications, built to meet diverse
-                client needs.
-              </p>
+              <h2 class="site_section--title">PROJECTS</h2>
+              <div class="site_section--right">
+                <p class="site_section--decs has_splitting--effect">
+                  Showcasing a variety of web development projects, from custom
+                  websites to dynamic web applications, built to meet diverse
+                  client needs.
+                </p>
+              </div>
             </div>
-            <div class="project_content--items">
+            <div class="project-list__header">
+              <span class="header-item">Company</span>
+              <span class="header-item">Type</span>
+              <span class="header-item">Industry</span>
+              <span class="header-item">Year</span>
+            </div>
+
+            <div class="project-list">
+              <!-- Project 1: THE SHOE TALES (2025) -->
               <div
-                class="project_content-item has_scroll--speed__element"
-                data-scroll-speed="3"
+                class="project-list__item"
+                data-img="./assets/images/tst-mockup.webp"
               >
-                <a href="#" class="projectAnchored__item">
-                  <div class="project_img--mian">
-                    <img
-                      src="./assets/images/Frame_13.webp"
-                      alt=""
-                      class="project_img"
-                    />
-                  </div>
-                  <div class="project_text--area">
-                    <div class="project_text--content">
-                      <div class="project_area--name">
-                        <h3 class="project_name">What A Fuel</h3>
-                      </div>
-                      <div class="project_area--tag">
-                        <p class="project_tag">
-                          Import & Export Broker Company
-                        </p>
-                      </div>
-                    </div>
-                    <div class="project_link--area">
-                      <img src="./assets/images/arrow.webp" alt="" />
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div
-                class="project_content-item has_scroll--speed__element"
-                data-scroll-speed="3.5"
-              >
-                <a href="#" class="projectAnchored__item">
-                  <div class="project_img--mian">
-                    <img
-                      src="./assets/images/Frame_15.webp"
-                      alt=""
-                      class="project_img"
-                    />
-                  </div>
-                  <div class="project_text--area">
-                    <div class="project_text--content">
-                      <div class="project_area--name">
-                        <h3 class="project_name">Brooklyn Travel & Tourism</h3>
-                      </div>
-                      <div class="project_area--tag">
-                        <p class="project_tag">Travel Company</p>
-                      </div>
-                    </div>
-                    <div class="project_link--area">
-                      <img src="./assets/images/arrow.webp" alt="" />
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div
-                class="project_content-item has_scroll--speed__element"
-                data-scroll-speed="4"
-              >
-                <a href="#" class="projectAnchored__item">
-                  <div class="project_img--mian">
-                    <img
-                      src="./assets/images/Frame_14.webp"
-                      alt=""
-                      class="project_img"
-                    />
-                  </div>
-                  <div class="project_text--area">
-                    <div class="project_text--content">
-                      <div class="project_area--name">
-                        <h3 class="project_name">Interno</h3>
-                      </div>
-                      <div class="project_area--tag">
-                        <p class="project_tag">Intirior Designing Company</p>
-                      </div>
-                    </div>
-                    <div class="project_link--area">
-                      <img src="./assets/images/arrow.webp" alt="" />
-                    </div>
-                  </div>
+                <a
+                  href="https://theshoetales.com/"
+                  target="_blank"
+                  class="project-list__link"
+                >
+                  <span class="project-list__name">THE SHOE TALES</span>
+                  <span class="project-list__type">Website</span>
+                  <span class="project-list__industry">Footwear Company</span>
+                  <span class="project-list__year">2025</span>
                 </a>
               </div>
 
+              <!-- Project 2: What A Fuel (2024) -->
               <div
-                class="project_content-item has_scroll--speed__element"
-                data-scroll-speed="4.5"
+                class="project-list__item"
+                data-img="./assets/images/Frame_13.webp"
               >
-                <a href="#" class="projectAnchored__item">
-                  <div class="project_img--mian">
-                    <img
-                      src="./assets/images/Frame_12.png"
-                      alt=""
-                      class="project_img"
-                    />
-                  </div>
-                  <div class="project_text--area">
-                    <div class="project_text--content">
-                      <div class="project_area--name">
-                        <h3 class="project_name">Creative Printer</h3>
-                      </div>
-                      <div class="project_area--tag">
-                        <p class="project_tag">Graphics Design Agency</p>
-                      </div>
-                    </div>
-                    <div class="project_link--area">
-                      <img src="./assets/images/arrow.webp" alt="" />
-                    </div>
-                  </div>
+                <a
+                  href="https://whatafuel.com/"
+                  target="_blank"
+                  class="project-list__link"
+                >
+                  <span class="project-list__name">What A Fuel</span>
+                  <span class="project-list__type">Website</span>
+                  <span class="project-list__industry"
+                    >Import & Export Broker Company</span
+                  >
+                  <span class="project-list__year">2024</span>
+                </a>
+              </div>
+
+              <!-- Project 3: Brooklyn Travel & Tourism (2024) -->
+              <div
+                class="project-list__item"
+                data-img="./assets/images/Frame_15.webp"
+              >
+                <a
+                  href="https://brooklyntravelandtourism.com/"
+                  target="_blank"
+                  class="project-list__link"
+                >
+                  <span class="project-list__name"
+                    >Brooklyn Travel & Tourism</span
+                  >
+                  <span class="project-list__type">Website</span>
+                  <span class="project-list__industry">Travel Company</span>
+                  <span class="project-list__year">2024</span>
+                </a>
+              </div>
+
+              <!-- Project 4: Blue Tees Golf (2024) -->
+              <div
+                class="project-list__item"
+                data-img="./assets/images/mockup-btg.webp"
+              >
+                <a
+                  href="https://blueteesgolf.com/"
+                  target="_blank"
+                  class="project-list__link"
+                >
+                  <span class="project-list__name">Blue Tees Golf</span>
+                  <span class="project-list__type">Website</span>
+                  <span class="project-list__industry"
+                    >Golf Technology Company</span
+                  >
+                  <span class="project-list__year">2024</span>
+                </a>
+              </div>
+
+              <!-- Project 5: Aditiya Synthetic (2024) -->
+              <div
+                class="project-list__item"
+                data-img="./assets/images/mockup-aditiya.webp"
+              >
+                <a
+                  href="https://aditiyasynthetic.vercel.app/"
+                  target="_blank"
+                  class="project-list__link"
+                >
+                  <span class="project-list__name">Aditiya Synthetic</span>
+                  <span class="project-list__type">Website</span>
+                  <span class="project-list__industry"
+                    >Synthetic Fiber Company</span
+                  >
+                  <span class="project-list__year">2024</span>
+                </a>
+              </div>
+
+              <!-- Project 6: Cupreon (2024) -->
+              <div
+                class="project-list__item"
+                data-img="./assets/images/mockup-cupor.webp"
+              >
+                <a
+                  href="https://cupreon.in/"
+                  target="_blank"
+                  class="project-list__link"
+                >
+                  <span class="project-list__name">Cupreon</span>
+                  <span class="project-list__type">Website</span>
+                  <span class="project-list__industry">Cupreon Company</span>
+                  <span class="project-list__year">2024</span>
+                </a>
+              </div>
+
+              <!-- Project 7: LAMSA INFOSOLUTIONS (2023) -->
+              <div
+                class="project-list__item"
+                data-img="./assets/images/lamsa-info-mockup.webp"
+              >
+                <a
+                  href="https://lamsa-fawn.vercel.app/"
+                  target="_blank"
+                  class="project-list__link"
+                >
+                  <span class="project-list__name">LAMSA INFOSOLUTIONS</span>
+                  <span class="project-list__type">Website</span>
+                  <span class="project-list__industry">IT, CYBER SECURITY</span>
+                  <span class="project-list__year">2023</span>
+                </a>
+              </div>
+
+              <!-- Project 8: Interno (2023) -->
+              <div
+                class="project-list__item"
+                data-img="./assets/images/Frame_14.webp"
+              >
+                <a
+                  href="https://mansurivilla.github.io/Interno/"
+                  target="_blank"
+                  class="project-list__link"
+                >
+                  <span class="project-list__name">Interno</span>
+                  <span class="project-list__type">Website</span>
+                  <span class="project-list__industry"
+                    >Interior Designing Company</span
+                  >
+                  <span class="project-list__year">2023</span>
                 </a>
               </div>
             </div>
+          </div>
+        </div>
+
+        <div class="project-hover-reveal">
+          <div class="project-hover-reveal__inner">
+            <div class="project-hover-reveal__img"></div>
           </div>
         </div>
       </section>
@@ -425,6 +521,17 @@
               alt="Skill Icon Wordpress"
             />
             <span class="skills__Label"> Wordpress </span>
+          </div>
+          <div class="skills_icon">
+            <img
+              class="skill"
+              src="./assets/images/shopify.png"
+              alt="Skill Icon Shopify"
+              width="50"
+              height="50"
+              loading="lazy"
+            />
+            <span class="skills__Label"> Shopify </span>
           </div>
           <div class="skills_icon">
             <img
@@ -507,8 +614,10 @@
               /></span>
             </li>
             <li class="site_footer-nav--links contact-section">
-              <a href="mailto:hello@adnanmansuri.com" class="has_active--effect"
-                >hello@adnanmansuri.com</a
+              <a
+                href="mailto:mansuriadnan2004@gmail.com"
+                class="has_active--effect"
+                >mansuriadnan2004@gmail.com</a
               >
               <span
                 ><img src="./assets/images/arrow.webp" alt="Arrow Icon"
@@ -521,11 +630,24 @@
             Copyright © <span id="year"></span> Adnan Mansuri. All rights
             reserved.
           </p>
-          <a href="#" class="has_active--effect"
-            ><img
-              src="./assets/images/linkdin.svg"
-              alt="Adnan Mansuri's Linkedin Profile"
-          /></a>
+          <div class="social_handles">
+            <a
+              href="https://www.linkedin.com/in/mansuri-adnan/"
+              target="_blank"
+              class="has_active--effect"
+              ><img
+                src="./assets/images/linkdin.svg"
+                alt="Adnan Mansuri's Linkedin Profile"
+            /></a>
+            <a
+              href="https://github.com/mansurivilla"
+              target="_blank"
+              class="has_active--effect"
+              ><img
+                src="./assets/images/github.svg"
+                alt="Adnan Mansuri's Github Profile"
+            /></a>
+          </div>
         </div>
       </div>
     </footer>
