Fixed Some issues

--- a/index.html
+++ b/index.html
@@ -313,6 +313,11 @@
                   <span class="project-list__type">Website</span>
                   <span class="project-list__industry">Footwear Company</span>
                   <span class="project-list__year">2025</span>
+                  <img
+                    src="./assets/images/tst-mockup.webp"
+                    alt="The Shoe Tales Thumbnail"
+                    class="project-list__mobile-img"
+                  />
                 </a>
               </div>
 
@@ -331,6 +336,11 @@
                     >Import & Export Broker Company</span
                   >
                   <span class="project-list__year">2024</span>
+                  <img
+                    src="./assets/images/Frame_13.webp"
+                    alt="What A Fuel Thumbnail"
+                    class="project-list__mobile-img"
+                  />
                 </a>
               </div>
 
@@ -349,6 +359,11 @@
                   <span class="project-list__type">Website</span>
                   <span class="project-list__industry">Travel Company</span>
                   <span class="project-list__year">2024</span>
+                  <img
+                    src="./assets/images/Frame_15.webp"
+                    alt="Brooklyn Travel Thumbnail"
+                    class="project-list__mobile-img"
+                  />
                 </a>
               </div>
 
@@ -367,6 +382,11 @@
                     >Golf Technology Company</span
                   >
                   <span class="project-list__year">2024</span>
+                  <img
+                    src="./assets/images/mockup-btg.webp"
+                    alt="Blue Tees Golf Thumbnail"
+                    class="project-list__mobile-img"
+                  />
                 </a>
               </div>
 
@@ -385,6 +405,11 @@
                     >Synthetic Fiber Company</span
                   >
                   <span class="project-list__year">2024</span>
+                  <img
+                    src="./assets/images/mockup-aditiya.webp"
+                    alt="Aditiya Synthetic Thumbnail"
+                    class="project-list__mobile-img"
+                  />
                 </a>
               </div>
 
@@ -401,6 +426,11 @@
                   <span class="project-list__type">Website</span>
                   <span class="project-list__industry">Cupreon Company</span>
                   <span class="project-list__year">2024</span>
+                  <img
+                    src="./assets/images/mockup-cupor.webp"
+                    alt="Cupreon Thumbnail"
+                    class="project-list__mobile-img"
+                  />
                 </a>
               </div>
 
@@ -417,6 +447,11 @@
                   <span class="project-list__type">Website</span>
                   <span class="project-list__industry">IT, CYBER SECURITY</span>
                   <span class="project-list__year">2023</span>
+                  <img
+                    src="./assets/images/lamsa-info-mockup.webp"
+                    alt="Lamsa Infosolutions Thumbnail"
+                    class="project-list__mobile-img"
+                  />
                 </a>
               </div>
 
@@ -435,6 +470,11 @@
                     >Interior Designing Company</span
                   >
                   <span class="project-list__year">2023</span>
+                  <img
+                    src="./assets/images/Frame_14.webp"
+                    alt="Interno Thumbnail"
+                    class="project-list__mobile-img"
+                  />
                 </a>
               </div>
             </div>
